# llmsimulator_ramulator

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/addr_mapper/: CMakeLists.txt
src/addr_mapper/impl/: linear_mappers.cpp
src/base/: CMakeLists.txt  config.h  request.cpp  request.h
src/dram/: CMakeLists.txt  node.h
src/dram/impl/: HBM3.cpp  LPDDR5.cpp
src/dram/lambdas/: action.h  preq.h
src/dram_controller/: CMakeLists.txt  controller.h
src/dram_controller/impl/: PIM_dram_controller.cpp  dummy_controller.cpp  generic_dram_controller.cpp
src/dram_controller/impl/plugin/: hydra.cpp  trace_recorder.cpp
src/dram_controller/impl/refresh/: all_bank_refresh.cpp
src/dram_controller/impl/scheduler/: PIM_scheduler.cpp
src/example/: CMakeLists.txt
src/frontend/: CMakeLists.txt  frontend.h
src/frontend/impl/: PIM_controller.cpp
src/frontend/impl/external_wrapper/: gem5_frontend.cpp
src/frontend/impl/memory_trace/: loadstore_trace.cpp  readwrite_trace.cpp
src/memory_system/: CMakeLists.txt  memory_system.h
src/memory_system/impl/: PIM_DRAM_system.cpp  dummy_memory_system.cpp  generic_DRAM_system.cpp
src/test/: CMakeLists.txt
src/translation/: CMakeLists.txt
